apps/cluster-gateway/public-ingress-gateway/50-service/public-ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-ingress-gateway
  namespace: cluster-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "1"    
spec:
  gatewayClassName: cilium
  listeners:
  ###
  # SYNAPSE
  ###
  - name: synapse-https
    hostname: "synapse.hoareau-marion.eu"
    port: 443  
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: synapse-hoareau-marion-eu-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: synapse
